--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,22 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_signout">Sign Out</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <string-array name="from_arrays">
+        <item>Select Starting Location</item>
+        <item>U-Globe</item>
+    </string-array>
+
+    <string-array name="destination_arrays">
+        <item>Select Destination</item>
+        <item>Science Tower</item>
+        <item>Chancellor Hall</item>
+        <item>Academic Tower</item>
+        <item>Management Tower</item>
+    </string-array>
 </resources>
